WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278421
Don't crash if we can't allocate JIT memory on non-JIT platforms
https://bugs.webkit.org/show_bug.cgi?id=278421
Summary
Don't crash if we can't allocate JIT memory on non-JIT platforms
daniel_liu4
Reported
2024-08-20 15:26:27 PDT
If we are on a platform where we cannot JIT, we shouldn't crash because we can't allocate JIT memory.
rdar://133718210
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2024-08-20 15:30:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32487
EWS
Comment 2
2024-08-20 17:26:52 PDT
Committed
282536@main
(e6baf795c1f5): <
https://commits.webkit.org/282536@main
> Reviewed commits have been landed. Closing PR #32487 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug