Don't crash if we can't allocate JIT memory on non-JIT systems https://bugs.webkit.org/show_bug.cgi?id=278421 rdar://133718210

Reviewed by Mark Lam and Yusuke Suzuki.

If we are on a non-JIT platform, we will not be using JIT memory, so
we should not crash because we failed to allocate JIT memory.

* Source/JavaScriptCore/jsc.cpp:
(CommandLine::parseArguments):

Canonical link: https://commits.webkit.org/282536@main